--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^19.1.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.1",
+    "react-hot-toast": "^2.6.0",
     "react-modal": "^3.16.3",
     "react-router-dom": "^7.9.1"
   },
